# smart-commissioning-app

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  Smart Commissioning Tool UI.txt  mypy.ini  preview.html  ruff.toml  smart_commissioning_tool_FIXED_fast.html  spec_extracted.txt  zip_inspector.html  zip_inspector_server.py
.github/: CODEOWNERS  pull_request_template.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  smoke_udmi_api.py
backend/app/api/: router.py  uploads.py
backend/app/api/routes/: blueprint.py  configuration.py  discovery.py  events.py  evidence.py  health.py  hub.py  imports.py  logs.py  reports.py  runs.py  system.py  udmi_schemas.py  users.py  validation.py
backend/app/core/: auth.py  config.py  db.py  logging.py  observability.py  runtime.py
backend/app/domain/: __init__.py  entities.py
backend/app/schemas/: __init__.py  configuration.py  imports.py  jobs.py  system.py  udmi_schemas.py  users.py
backend/app/scripts/: backup.py  import_runtime_state.py  ingest.py  retention.py  sync.py
backend/app/services/: __init__.py  backup_service.py  configuration_service.py  discovery_observations.py  engine_dispatch.py  import_service.py  interface_service.py  job_queue.py  log_service.py  mqtt_config_publish.py  mqtt_config_publish_processor.py  mqtt_settings.py  register_topics.py  report_pdf.py  reports_integrity.py  retention_service.py  run_dispatch.py  run_service.py  udmi_report_model.py  udmi_run_processor.py  udmi_validation.py  validation_export.py
backend/tests/: conftest.py  harness.py  test_auth.py  test_discovery_source_interface_guard.py  test_engine_dispatch_bacnet_backend.py  test_engine_dispatch_ip_enrichment.py  test_engine_dispatch_source_interface.py  test_engines_api.py  test_evidence_api.py  test_exception_handlers.py  test_hub_sync_api.py  test_import_csv_hardening.py  test_import_latest_api.py  test_import_templates.py  test_interface_service.py  test_log_destinations.py  test_mqtt_capture_window.py  test_mqtt_register_compare.py  test_mqtt_secret_resolver.py  test_observability.py  test_portable_launcher.py  test_rbac.py  test_rbac_enforcement.py  test_reports_discovery_inventory.py  test_reports_export_api.py  test_reports_list_api.py  test_reports_udmi_v1.py  test_reports_validation.py  test_run_dispatch_async.py  test_run_recovery.py  test_runs_api.py  test_secret_storage.py  test_sse.py  test_static_frontend.py  test_system_interfaces_api.py  test_udmi_capture_window.py  test_udmi_register_flow.py  test_udmi_schemas_api.py  test_udmi_validation_export.py  test_uvicorn_logger_propagation.py  (+1 more)
core/: MANIFEST.in  alembic.ini  pyproject.toml
core/alembic/: env.py
core/alembic/versions/: c4a7ced176a9_engine_framework_discovery_tables_and_.py  c9663f90f68a_initial_schema.py  c998144d98d4_edge_hub_sync_columns.py  d1f2a3b4c5d6_users_table_rbac.py  e5f6a7b8c9d0_udmi_schema_sets_table.py
core/smart_commissioning_core/: __init__.py  dbo_units.py  integrity.py  mqtt_config_publish.py  mqtt_config_publish_processor.py  mqtt_settings.py  mqtt_transport.py  rbac.py  records.py  run_store.py  sync.py  sync_identity.py  udmi_results.py  udmi_run_processor.py  udmi_schema.py  udmi_validation.py
core/smart_commissioning_core/db/: __init__.py  base.py  db_run_store.py  engine.py  migrate.py  models.py  repositories.py
core/smart_commissioning_core/engines/: __init__.py  bacnet_discovery.py  bacnet_params.py  base.py  comparison.py  comparison_common.py  ip_scan.py  mqtt_discovery.py  point_validation.py  safety.py
core/smart_commissioning_core/fixtures/: udmi_full_report.json
core/smart_commissioning_core/schemas/dbo/: UPSTREAM.md
core/smart_commissioning_core/schemas/udmi/: UPSTREAM.md
core/tests/: test_bacnet_discovery.py  test_bacnet_failure_legibility.py  test_bacnet_value_normalization.py  test_bacpypes3_contract.py  test_comparison.py  test_db_persistence.py  test_dbo_units.py  test_engines.py  test_integrity.py  test_ip_scan.py  test_mqtt_config_multipoint.py  test_mqtt_config_rollback.py  test_mqtt_discovery.py  test_mqtt_settings.py  test_mqtt_tls_secret_resolver.py  test_mqtt_transport.py  test_point_validation.py  test_sync.py  test_udmi_results.py  test_udmi_validation.py
deliverables/: Smart_Commissioning_App_Detailed_Specification.md  Smart_Commissioning_App_Standalone_HTML_Review.html  Smart_Commissioning_App_Windows_Portable_README.txt  sbom.json
docs/: SBOM.generated.md  SBOM.md  backup-restore.md  engineer-update-2026-06-18.md  field-followups-2026-07-16.md  field-message-2026-07-16.md  field-message-v0.1.14.md  field-message-v0.1.15.md  field-message-v0.1.16.md  field-message-v0.1.17.md  field-message-v0.1.18.md  field-message-v0.1.19.md  field-message-v0.1.20.md  field-message-v0.1.21.md  field-message-v0.1.22.md  field-quickstart.md  handoff-2026-07-15-field-walkthrough.md  handoff-2026-07-15-pete-walkthrough.md  handoff-v0.1.13-remaining-punchlist.md  lab-day-2026-07-20-runbook.md  observability.md  pete-followups-2026-07-16.md  pete-message-2026-07-16.md  pete-message-v0.1.14.md  pete-message-v0.1.15.md  pete-message-v0.1.16.md  pete-message-v0.1.17.md  pete-message-v0.1.18.md  pete-message-v0.1.19.md  pete-message-v0.1.20.md  phase5-live-surface-inventory.md  phase5-onsite-validation.md  portable-bundle-rebuild.md  production-architecture.md  protocol-conformance.md  quickstart.md  release-notes-v0.1.21.md  release-notes-v0.1.22.md  release-notes-v0.1.23.md  release-notes-v0.1.24.md  (+11 more)
frontend/: Dockerfile  eslint.config.js  index.html  legacy-prototype.html  nginx.conf  package-lock.json  (+4 more)
worker/: Dockerfile  README.md  pyproject.toml
worker/app/: __init__.py  config.py  db.py  logging.py  main.py  mqtt_config_provider.py  smoke_udmi_adapter.py  tasks.py
worker/app/fixtures/: udmi_full_report.json
worker/app/services/: mqtt_config_publish_processor.py  run_store.py  udmi_run_processor.py  udmi_validation.py
worker/tests/: test_mqtt_config_provider.py  test_tasks_interrupt.py
(+70 files in other folders)
