[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-commissioning-api"
version = "0.1.0"
description = "FastAPI service scaffold for the Smart Commissioning Tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=43.0,<47.0",
  "dramatiq[redis]>=1.17.1,<2.0",
  "fastapi>=0.115.5,<1.0",
  "httpx>=0.27.2,<1.0",
  "uvicorn[standard]>=0.32.1,<1.0",
  "pydantic-settings>=2.6.1,<3.0",
  "sqlalchemy>=2.0.36,<3.0",
  "psycopg[binary]>=3.2.3,<4.0",
  "redis>=5.2.0,<6.0",
  "python-multipart>=0.0.20,<1.0",
  "openpyxl>=3.1.5,<4.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
