[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-commissioning-api"
version = "0.1.0"
description = "FastAPI service scaffold for the Smart Commissioning Tool."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: System :: Monitoring",
  "Development Status :: 3 - Alpha",
  "Private :: Do Not Upload",
]
dependencies = [
  "cryptography>=43.0,<47.0",
  "dramatiq[redis]>=1.17.1,<2.0",
  "fastapi>=0.115.5,<1.0",
  "httpx>=0.27.2,<1.0",
  "uvicorn[standard]>=0.32.1,<1.0",
  "pydantic-settings>=2.6.1,<3.0",
  "sqlalchemy>=2.0.36,<3.0",
  "psycopg[binary]>=3.2.3,<4.0",
  "redis>=5.2.0,<6.0",
  "python-multipart>=0.0.20,<1.0",
  "openpyxl>=3.1.5,<4.0",
  "prometheus-client>=0.21.0,<1.0"
]

[project.optional-dependencies]
# Optional tooling for generating an SBOM / license inventory with the
# off-the-shelf tools. The in-repo scripts/generate_sbom.py uses only the
# stdlib and needs none of these; see docs/SBOM.md.
sbom = ["pip-licenses>=5.0", "cyclonedx-bom>=4.0"]

[tool.setuptools.packages.find]
include = ["app*"]
