[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-commissioning-api"
version = "0.1.0"
description = "FastAPI service scaffold for the Smart Commissioning Tool."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: System :: Monitoring",
  "Development Status :: 3 - Alpha",
  "Private :: Do Not Upload",
]
# Runtime dependencies are EXACT-PINNED ("==") to the versions the test suite
# was last run against, so a fresh CI install resolves the SAME tested versions
# as local. Exact-pinning the web tier (fastapi/starlette/uvicorn/pydantic) is
# the whole point here: unpinned ">=" ranges previously let CI pull a newer
# fastapi/starlette than local, which broke the observability test in CI while
# passing locally. starlette is pinned transitively via fastapi==0.135.3.
# To bump a dependency: change the pin here, re-run the tests locally, commit.
dependencies = [
  "cryptography==46.0.7",
  "dramatiq[redis]==1.18.0",
  "fastapi==0.135.3",
  "httpx==0.28.1",
  "uvicorn[standard]==0.44.0",
  "pydantic-settings==2.13.1",
  "sqlalchemy==2.0.49",
  "psycopg[binary]==3.3.4",
  "redis==5.3.1",
  "python-multipart==0.0.26",
  "openpyxl==3.1.5",
  "prometheus-client==0.25.0",
  # ponytail: deliberate stdlib-before-deps exception. psutil is the only
  # cross-platform way to enumerate NIC (name, ipv4, prefix, up/down) without
  # locale-fragile ipconfig/WMI parsing; the import is guarded so it degrades to
  # Auto-only if absent. Range-pinned (not ==) as an optional, guarded dep.
  "psutil>=5.9"
]

[project.optional-dependencies]
# Optional tooling for generating an SBOM / license inventory with the
# off-the-shelf tools. The in-repo scripts/generate_sbom.py uses only the
# stdlib and needs none of these; see docs/SBOM.md.
sbom = ["pip-licenses>=5.0", "cyclonedx-bom>=4.0"]

[tool.setuptools.packages.find]
include = ["app*"]
