[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-commissioning-core"
version = "0.1.0"
description = "Shared UDMI validation and MQTT logic for the Smart Commissioning API and worker."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6,<3.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
]

[project.optional-dependencies]
# Real BACnet/IP discovery transport (Bacpypes3Backend). NOT a hard dependency:
# the BACnet engine defaults to a simulated, offline backend and only needs
# bacpypes3 when the real backend is selected. The real path REQUIRES on-site
# validation against actual BACnet devices and has never been integration-tested.
bacnet = ["bacpypes3>=0.0.98"]

[tool.setuptools.packages.find]
include = ["smart_commissioning_core*"]

[tool.setuptools.package-data]
smart_commissioning_core = ["fixtures/*.json"]
