[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-commissioning-core"
version = "0.1.0"
description = "Shared UDMI validation and MQTT logic for the Smart Commissioning API and worker."
requires-python = ">=3.12"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: System :: Monitoring",
  "Development Status :: 3 - Alpha",
  "Private :: Do Not Upload",
]
# Runtime dependencies are EXACT-PINNED ("==") to the versions that the test
# suite was last run against, so a fresh CI install resolves the SAME tested
# versions as local. Unpinned ">=" ranges previously let CI pull newer
# releases than local, producing a "passes-local-fails-CI" failure. To bump a
# dependency: change the pin here, re-run the test suite locally, then commit.
dependencies = [
  "pydantic==2.12.5",
  "sqlalchemy==2.0.49",
  "alembic==1.18.4",
]

[project.optional-dependencies]
# Real BACnet/IP discovery transport (Bacpypes3Backend). NOT a hard dependency:
# the BACnet engine defaults to a simulated, offline backend and only needs
# bacpypes3 when the real backend is selected. The real path REQUIRES on-site
# validation against actual BACnet devices and has never been integration-tested.
bacnet = ["bacpypes3>=0.0.98"]
# Optional tooling for generating an SBOM / license inventory with the
# off-the-shelf tools (the in-repo scripts/generate_sbom.py uses only the
# stdlib and needs none of these). See docs/SBOM.md.
sbom = ["pip-licenses>=5.0", "cyclonedx-bom>=4.0"]

[tool.setuptools.packages.find]
include = ["smart_commissioning_core*"]

[tool.setuptools]
# Honour MANIFEST.in so the Alembic env ships in the sdist too.
include-package-data = true

[tool.setuptools.package-data]
smart_commissioning_core = ["fixtures/*.json"]

# The Alembic migration environment (alembic.ini + alembic/**) lives at the
# project root, not inside the smart_commissioning_core package, because the
# Alembic CLI and env.py expect that conventional layout. setuptools will not
# auto-package files outside the package tree, so we ship them as data-files.
# In a built wheel these land under
#   smart_commissioning_core-<ver>.data/data/share/smart_commissioning_core/...
# and on install resolve to <sys.prefix>/share/smart_commissioning_core/...,
# which smart_commissioning_core.db.migrate locates at runtime (it also keeps
# the editable source-tree path working as a fallback).
[tool.setuptools.data-files]
"share/smart_commissioning_core" = ["alembic.ini"]
"share/smart_commissioning_core/alembic" = [
  "alembic/env.py",
  "alembic/script.py.mako",
]
# Glob so a newly-added migration ships automatically (setuptools>=62 expands
# globs in data-files), instead of a hardcoded list that silently drifts.
"share/smart_commissioning_core/alembic/versions" = ["alembic/versions/*.py"]
