[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-commissioning-worker"
version = "0.1.0"
description = "Background worker scaffold for Smart Commissioning discovery and validation jobs."
requires-python = ">=3.12"
dependencies = [
  "dramatiq[redis]>=1.17.1,<2.0",
  "pydantic-settings>=2.6.1,<3.0",
  "sqlalchemy>=2.0.36,<3.0",
  "psycopg[binary]>=3.2.3,<4.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
